--- a/index.html
+++ b/index.html
@@ -1,17 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>RCCG WORD AGLOW PARISH </title>
     <link rel="stylesheet" href="/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <!----------Navigation----------->
+    <div class="bg-[#28166F] px-[25px] md:px-[35px] pt-[35px] md:bg-white">
+        <div class="flex justify-between md:w-full pb-5 md:pb-0">
+            <div class="flex gap-[3px] md:gap-[7px]">
+                <img src="/Images/rccglogo.png" alt="" class="w-[54px] h-[54px] md:w-[107px] md:h-[107px] cursor-pointer rounded-full">
+                <div class="flex flex-col justify-center align-middle">
+                    <p class="text-white text-[8px] not-italic font-bold leading-normal md:text-black md:text-[20px]" id="inter">THE REEDEMED CHRISTIAN CHURCH OF GOD</p>
+                    <p class="text-white text-[14px] not-italic font-bold leading-normal md:text-black md:text-[24px]" id="inter">WORD AGLOW PARISH</p>
+                    <p class="text-white text-[10px] not-italic font-medium leading-normal md:hidden" id="inter">Alive by the word, Aglow in the spirit</p>
+                </div>
+            </div>
+            <nav class="flex justify-between md:flex" id="nav-menu">
+                <ul class="flex flex-col gap-[15px] align-middle justify-center text-center md:flex md:flex-row md:items-center z-[1] bg-[#28166F] md:bg-white md:z-auto md:static absolute w-full h-[350px] left-0 md:w-auto md:h-auto md:pb-0 pt-0 pb-0 md:shadow-none md:pl-0 md:opacity-100 md:space-x-3 space-x-2 opacity-0 top-[-400px] menu-dropdown">
+                    <li class="list-none inline-block px-5 md:px-0"><a href="#" class="no-underline text-white text-[20px] not-italic font-normal leading-normal hover:text-white duration-300 md:text-black md:text-[17px] md:font-bold" id="inter">Home</a></li>
+                    <li class="list-none inline-block px-5 md:hidden"><a href="#" class="no-underline text-white text-[20px] not-italic font-normal leading-normal hover:text-white duration-300">Get to know us</a></li>
+                    <li class="list-none inline-block px-5 md:px-0"><a href="#" class="no-underline text-white text-[20px] not-italic font-normal leading-normal hover:text-white duration-300 md:text-black md:text-[17px] md:font-bold">About Us</a></li>
+                    <li class="list-none inline-block px-5 md:hidden"><a href="#" class="no-underline text-white text-[20px] not-italic font-normal leading-normal hover:text-white duration-300">Mission & Vision Statement</a></li>
+                    <li class="list-none inline-block px-5 md:hidden md:mb-0"><a href="#" class="no-underline text-white text-[20px] not-italic font-normal leading-normal hover:text-white duration-300">Weekly Service</a></li>
+                    <li class="list-none inline-block px-5 md:hidden md:mb-0"><a href="#" class="no-underline text-white text-[20px] not-italic font-normal leading-normal hover:text-white duration-300">Contact Us</a></li>
+                    <li class="list-none inline-block px-5 md:px-0 md:mb-0"><a href="#" class="no-underline text-white text-[20px] not-italic font-normal leading-normal hover:text-white duration-300 md:text-black md:text-[17px] md:font-bold">Information Center</a></li>
+                    <li class="hidden list-none px-5 mb-[22px] md:flex md:px-0 md:mb-0"><a href="#" class="no-underline text-black hover:text-white duration-300 md:text-black md:text-[17px] md:font-bold">Contact</a></li>
+                    <li class="hidden list-none md:flex px-5 mb-[22px] md:px-0 md:mb-0"><a href="#" class="no-underline text-white bg-[#28166F] hover:text-white md:px-5 md:py-[10px] duration-300">Online Giving</a></li>
+                    
+                </ul>
+            </nav>
+
+            <ion-icon class="rounded-xl w-10 h-10 text-white cursor-pointer md:hidden" name="menu" onclick="Menu(this)"></ion-icon>
+        </div>
+    </div>
+
     
+
+    <script>
+        //Hamburger Menu
+        function Menu(e) {
+            let list = document.querySelector('ul');
+            if (e && e.name === 'menu') {
+                e.name = 'close';
+                list.classList.remove('menu-dropdown');
+                list.classList.add('top-[105px]', 'opacity-100');
+            } else {
+                e.name = 'menu';
+                list.classList.add('menu-dropdown');
+                list.classList.remove('top-[105px]', 'opacity-100'); 
+            }
+        }
+    </script>
+
 </body>
+
 </html>
